--- a/app/src/main/res/layout/book_header_layout.xml
+++ b/app/src/main/res/layout/book_header_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="80dp"
     android:clipChildren="false"
     android:orientation="vertical"
     android:visibility="visible"
@@ -20,7 +20,7 @@
             android:layout_width="150dp"
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
-            android:clipChildren="false"/>
+            android:clipChildren="false" />
 
         <com.example.lxh.firstapp.banner.BannerIndicator
             android:id="@+id/indicator"
@@ -29,7 +29,7 @@
             android:layout_gravity="bottom"
             android:layout_marginBottom="15dp"
             android:gravity="center"
-            app:space="@dimen/indicator_space"/>
+            app:space="@dimen/indicator_space" />
     </FrameLayout>
 
     <LinearLayout
@@ -37,11 +37,13 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:orientation="horizontal">
+
         <View
             android:layout_width="2dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
-            android:background="@color/color_black"/>
+            android:background="@color/color_black" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -49,7 +51,7 @@
             android:gravity="center_vertical"
             android:text="排行"
             android:textColor="@color/skin_title_color"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
     </LinearLayout>
 
 </LinearLayout>
