--- a/app/src/main/res/layout/home_book_layout.xml
+++ b/app/src/main/res/layout/home_book_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -14,24 +14,27 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-            <include
-                layout="@layout/book_header_layout"/>
+            <include layout="@layout/book_header_layout" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/tool_bar"
                 style="@style/TitleBar"
+                android:background="@color/colorTheme"
                 app:layout_collapseMode="pin">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <ImageView
                         android:id="@+id/iv_left"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/titlebar_menu"/>
+                        android:src="@drawable/titlebar_menu" />
+
                     <TextView
                         android:id="@+id/tv_search"
                         android:layout_width="200dp"
@@ -39,7 +42,7 @@
                         android:layout_centerInParent="true"
                         android:background="@drawable/search_background"
                         android:gravity="center"
-                        android:text="搜索你想要的书籍"/>
+                        android:text="搜索你想要的书籍" />
 
                     <TextView
                         android:id="@+id/tv_title"
@@ -50,7 +53,7 @@
                         android:text="书籍"
                         android:textColor="@color/color_white"
                         android:textSize="20dp"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <ImageView
                         android:id="@+id/iv_right"
@@ -59,7 +62,7 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="15dp"
-                        android:src="@drawable/actionbar_search"/>
+                        android:src="@drawable/actionbar_search" />
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -71,5 +74,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 </android.support.design.widget.CoordinatorLayout>
