--- a/app/src/main/res/layout/home_category_layout.xml
+++ b/app/src/main/res/layout/home_category_layout.xml
@@ -1,24 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tl_category"
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/abl_category"
         android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:background="@color/color_white"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/colorTheme"
-        app:tabTextColor="@color/skin_title_important_color"/>
+        android:layout_height="wrap_content"
+        android:background="@color/translate"
+        app:layout_behavior="com.example.lxh.firstapp.Behaivor.CategoryBehavior">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="47dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+
+            <com.example.lxh.firstapp.view.AutoLayout
+                android:id="@+id/al_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:horizontal_space="10dp"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.7"
+                app:vertical_space="20dp" />
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tl_category"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:background="@color/color_white"
+            app:tabMaxWidth="70dp"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/colorTheme"
+            app:tabTextColor="@color/skin_title_important_color" />
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_category_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
