--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
 
-    <style name="AppTheme" parent="MyThemeRed"/>
+    <style name="AppTheme" parent="MyThemeRed" />
 
     <!-- 网易红为主色调 -->
     <style name="MyThemeRed" parent="Theme.AppCompat.Light.NoActionBar">
@@ -34,13 +34,18 @@
     </style>
 
     <declare-styleable name="BannerIndicator">
-        <attr name="space" format="dimension"/>
+        <attr name="space" format="dimension" />
     </declare-styleable>
 
     <declare-styleable name="BottomTabLayout">
-        <attr name="icon_size" format="dimension"/>
-        <attr name="text_size" format="dimension"/>
-        <attr name="text_color" format="color"/>
-        <attr name="select_color" format="color"/>
+        <attr name="icon_size" format="dimension" />
+        <attr name="text_size" format="dimension" />
+        <attr name="text_color" format="color" />
+        <attr name="select_color" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="AutoLayout">
+        <attr name="vertical_space" format="dimension" />
+        <attr name="horizontal_space" format="dimension" />
     </declare-styleable>
 </resources>
